# MatrixRiskEngine

./: .gitignore  LESSONS_LEARNED.md  README.md  pyproject.toml
.claude/: manifest.yaml
.claude/artifacts/: 002_spec_v1.md  003_tasklist_v1.md  004_rules_v1.yaml  005_quality_gates_v1.md
.claude/remediation/: remediation_tasks.md
config/: matrix_risk_engine_rules.yaml
docs/: AGENT_DRIVEN_DEVELOPMENT.md  matrix-risk-engine.html  matrix_risk_engine_coding_agent_system_prompt.md  matrix_risk_engine_decisions.md  matrix_risk_engine_evolution.md  matrix_risk_engine_lessons_applied.md  persona_evaluation.md  solution_design.md
notebooks/: Research.ipynb  RiskDashboard.ipynb  StrategyBacktest.ipynb
scripts/: historical_scenarios.py  quality_gates.py  risk_validation_report.py  var_backtest.py
src/adapters/: arcticdb_adapter.py  filesystem_adapter.py  optimizer_adapter.py  ore_adapter.py  quantstats_adapter.py  vectorbt_adapter.py
src/cli/: __init__.py  backtest_runner.py  data_loader.py  optimizer_runner.py  risk_calculator.py
src/core/: quality_gates.py
src/core/domain/: __init__.py  backtest_result.py  constraint.py  contract.md  portfolio.py  risk_metrics.py  stress_scenario.py  time_series.py
src/core/ports/: __init__.py  backtest_port.py  contract.md  data_port.py  report_port.py  risk_port.py
src/core/services/: backtest_engine.py  factor_analysis_service.py  optimization_service.py  risk_calculation_service.py  stress_testing_service.py
tests/e2e/: __init__.py  test_full_pipeline.py
tests/integration/: test_backtest_flow.py  test_data_pipeline_flow.py  test_optimization_flow.py  test_risk_measurement_flow.py  test_stress_testing_flow.py
tests/performance/: __init__.py  test_performance_backtest.py  test_performance_data_load.py  test_performance_optimization.py  test_performance_var.py
tests/stubs/: stub_data_adapter.py
tests/unit/: test_backtest_engine.py  test_backtest_result.py  test_cli.py  test_constraint.py  test_corporate_actions.py  test_factor_analysis_service.py  test_filesystem_adapter.py  test_optimization_service.py  test_optimizer_adapter.py  test_ore_adapter.py  test_portfolio.py  test_quality_gates.py  test_quantstats_adapter.py  test_risk_metrics.py  test_stress_scenario.py  test_stub_data_adapter.py  test_time_series.py  test_vectorbt_adapter.py
